--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-
         </activity>
         <activity
             android:name=".HomeActivity"
@@ -25,6 +24,10 @@
         <activity
             android:name=".PendingOrderList"
             android:label="@string/title_activity_pending_order_list" >
+        </activity>
+        <activity
+            android:name=".OrderDetails"
+            android:label="@string/title_activity_order_details" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
