--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -32,7 +33,6 @@
         <activity
             android:name=".OrderDetailsActivity"
             android:label="@string/title_activity_order_details" >
-
         </activity>
         <activity
             android:name=".OrderAddressActivity"
@@ -40,7 +40,13 @@
         </activity>
         <activity
             android:name=".OrderCommentActivity"
-            android:label="@string/title_activity_order_comment" >
+            android:label="@string/title_activity_order_comment" ></activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login"></activity>
+        <activity
+            android:name=".UserProfileActivity"
+            android:label="@string/title_activity_user_profile">
         </activity>
     </application>
 
