--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,13 +40,19 @@
         </activity>
         <activity
             android:name=".OrderCommentActivity"
-            android:label="@string/title_activity_order_comment" ></activity>
+            android:label="@string/title_activity_order_comment" />
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:label="@string/title_activity_login" />
         <activity
             android:name=".UserProfileActivity"
-            android:label="@string/title_activity_user_profile">
+            android:label="@string/title_activity_user_profile"></activity>
+        <activity
+            android:name=".ForgetPasswordActivity"
+            android:label="@string/title_activity_forget_password"></activity>
+        <activity
+            android:name=".RegisterUserActivity"
+            android:label="@string/title_activity_register_user">
         </activity>
     </application>
 
