--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".HomeActivity"
@@ -46,13 +42,21 @@
             android:label="@string/title_activity_login" />
         <activity
             android:name=".UserProfileActivity"
-            android:label="@string/title_activity_user_profile"></activity>
+            android:label="@string/title_activity_user_profile" />
         <activity
             android:name=".ForgetPasswordActivity"
-            android:label="@string/title_activity_forget_password"></activity>
+            android:label="@string/title_activity_forget_password" />
         <activity
             android:name=".RegisterUserActivity"
-            android:label="@string/title_activity_register_user">
+            android:label="@string/title_activity_register_user"></activity>
+        <activity
+            android:name=".LocationActivity"
+            android:label="@string/title_activity_location_activty">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
