--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-
         </activity>
         <activity
             android:name=".HomeActivity"
@@ -20,7 +19,7 @@
         </activity>
         <activity
             android:name=".PackageListActivity"
-            android:label="@string/title_activity_package_list"></activity>
+            android:label="@string/title_activity_package_list" />
         <activity
             android:name=".PackageDetailActivity"
             android:label="@string/title_activity_package_detail" >
@@ -51,7 +50,7 @@
             android:label="@string/title_activity_forget_password" />
         <activity
             android:name=".RegisterUserActivity"
-            android:label="@string/title_activity_register_user"></activity>
+            android:label="@string/title_activity_register_user" />
         <activity
             android:name=".LocationActivity"
             android:label="@string/title_activity_location_activty">
@@ -60,6 +59,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".OrderCouponActivity"
+            android:label="@string/title_activity_order_coupon">
         </activity>
     </application>
 
