--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,10 +65,13 @@
             android:label="@string/title_activity_order_coupon" />
         <activity
             android:name=".MyCouponActivity"
-            android:label="@string/title_activity_my_coupon"></activity>
+            android:label="@string/title_activity_my_coupon" />
         <activity
             android:name=".NoticeActivity"
-            android:label="@string/title_activity_message">
+            android:label="@string/title_activity_message"></activity>
+        <activity
+            android:name=".TestActivity"
+            android:label="@string/title_activity_test">
         </activity>
     </application>
 
